[gd_scene load_steps=4 format=3 uid="uid://clx8mtyjcj3k7"]

[ext_resource type="Script" uid="uid://csxxyvuhfrsft" path="res://src/Menus/MainMenu/main_menu.gd" id="1_2wqkv"]
[ext_resource type="FontFile" uid="uid://d0x0t3ujmkp52" path="res://assets/fonts/Watermelon Days.ttf" id="2_jd817"]
[ext_resource type="Theme" uid="uid://t8gshn41l055" path="res://assets/UI/SimpleBox.tres" id="3_ex3qf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2wqkv")

[node name="VersionText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3840.0
offset_top = -110.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0.301961, 0.65098, 1, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("2_jd817")
theme_override_font_sizes/font_size = 96
text = "v1.0.0.0"
horizontal_alignment = 2

[node name="TextContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 405.0
grow_horizontal = 2

[node name="Title" type="Label" parent="TextContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.301961, 0.65098, 1, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("2_jd817")
theme_override_font_sizes/font_size = 256
text = "CRYSTAL DASH"
horizontal_alignment = 1

[node name="DevTitle" type="Label" parent="TextContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.301961, 0.65098, 1, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("2_jd817")
theme_override_font_sizes/font_size = 96
text = "Developed by sparrowworks"
horizontal_alignment = 1

[node name="HighscoreText" type="Label" parent="."]
layout_mode = 2
offset_top = 509.0
offset_right = 3840.0
offset_bottom = 619.0
theme_override_colors/font_outline_color = Color(0.301961, 0.65098, 1, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("2_jd817")
theme_override_font_sizes/font_size = 96
text = "your highscore: 0"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -350.0
offset_right = 350.0
offset_bottom = 550.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="PlayButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(700, 150)
layout_mode = 2
theme = ExtResource("3_ex3qf")
theme_override_font_sizes/font_size = 96
text = "Play"

[node name="SettingsButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(700, 150)
layout_mode = 2
theme = ExtResource("3_ex3qf")
theme_override_font_sizes/font_size = 96
text = "Settings"

[node name="HelpButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(700, 150)
layout_mode = 2
theme = ExtResource("3_ex3qf")
theme_override_font_sizes/font_size = 96
text = "Help"

[node name="QuitButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(700, 150)
layout_mode = 2
theme = ExtResource("3_ex3qf")
theme_override_font_sizes/font_size = 96
text = "Quit"

[connection signal="pressed" from="ButtonContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ButtonContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ButtonContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
